@@ -1,3 +1,7 @@
+Mon May 13 17:05:22 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-settings-font.c (load_cursor): s/.gnome/.gnome2/g
+
 2002-05-12  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-settings-xsettings.c:
